fixing dark mode issues

--- a/src/pages/blog/blog-post.css
+++ b/src/pages/blog/blog-post.css
@@ -55,17 +55,16 @@ li > code {
 	@apply bg-slate-200 rounded-md p-1 text-base;
 }
 
-@media (prefers-color-scheme: dark) {
-	.markdown p > code,
-	li > code {
-		@apply bg-slate-800 rounded-md p-1 text-base;
-	}
 
-	.markdown blockquote {
-		@apply border-l-4 border-slate-600 italic my-4 p-4 bg-slate-800 rounded-tr-md rounded-br-md;
-	}
+.dark .markdown p > code,
+li > code {
+	@apply bg-slate-800 rounded-md p-1 text-base;
+}
 
-	.markdown img {
-		@apply bg-slate-200;
-	}
+.dark .markdown blockquote {
+	@apply border-l-4 border-slate-600 italic my-4 p-4 bg-slate-800 rounded-tr-md rounded-br-md;
+}
+
+.dark .markdown img {
+	@apply bg-slate-200;
 }
